--- a/new-ui.css
+++ b/new-ui.css
@@ -1,7 +1,19 @@
 body{
-
+ background-color: #fff !important;
 }
-
+/*login css start */
+#login_container {
+    max-width: 700px;
+    min-width: 300px;
+    margin: 70px auto;
+    padding: 50px 150px;
+    box-shadow: 0px 4px 8px 3px #e3e3e3;
+}
+.subcontent button{
+width: 100%;
+    border-radius: 5px;
+    height: 40px;
+}
 .color-blue {
     background-color: #5277ff !important;
 }
