--- a/new-ui.css
+++ b/new-ui.css
@@ -9,15 +9,17 @@ body{
     padding: 50px 150px;
     box-shadow: 0px 4px 8px 3px #e3e3e3;
 }
-admin_account_login:before{
- content:'';
- position:absoulte;
- top:0px;
- left:0px;
- background-image:url('https://i0.wp.com/easysimpleapp.com/wp-content/uploads/2023/04/Asset-1@4x-8.png?resize=300%2C33&ssl=1');
- height:30px;
- width:230px;
+body.admin_account_login:before {
+    content: '';
+    background-color: #dbdbdb;
+    height: 30px;
+    width: 230px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  background-image:url('https://i0.wp.com/easysimpleapp.com/wp-content/uploads/2023/04/Asset-1@4x-8.png?resize=300%2C33&ssl=1');
 }
+
 .subcontent button{
 width: 100%;
     border-radius: 5px;
