--- a/new-ui.css
+++ b/new-ui.css
@@ -10,14 +10,15 @@ body{
     box-shadow: 0px 4px 8px 3px #e3e3e3;
 }
 body.admin_account_login:before {
-    content: '';
-    background-color: #dbdbdb;
-    height: 30px;
-    width: 230px;
+  content: '';
+    height: 40px;
+    width: 310px;
     position: absolute;
-    top: 0;
-    left: 0;
-  background-image:url('https://i0.wp.com/easysimpleapp.com/wp-content/uploads/2023/04/Asset-1@4x-8.png?resize=300%2C33&ssl=1');
+    top: 15px;
+    left: 15px;
+    background-image: url(https://i0.wp.com/easysimpleapp.com/wp-content/uploads/2023/04/Asset-1@4x-8.png?resize=300%2C33&ssl=1);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .subcontent button{
