--- a/new-ui.css
+++ b/new-ui.css
@@ -1,6 +1,19 @@
 body{
  background-color: #fff !important;
 }
+/*global  css start */
+label {
+    font-weight: bold;
+    color: #373d3f;
+}
+input{
+height: 40px;
+    border: 1px solid #cdd2e1;
+    background-color: #fff!important;
+    border-radius: 5px;
+}
+
+
 /*login css start */
 #login_container {
     max-width: 700px;
@@ -8,6 +21,7 @@ body{
     margin: 70px auto;
     padding: 50px 150px;
     box-shadow: 0px 4px 8px 3px #e3e3e3;
+   position: relative;
 }
 body.admin_account_login:before {
   content: '';
@@ -20,12 +34,32 @@ body.admin_account_login:before {
     background-repeat: no-repeat;
     background-position: center;
 }
-
+#nav-login{
+ position: absolute;
+    bottom: 30px;
+    width: 100%;
+    left: 0;
+}
+#nav-login li.active{
+display:none;
+}
+#nav-login li{
+width:100%!important;
+}
+#nav-login a[rel="login"]:before {
+    content: 'Already have an account?';
+    color: #5a5a5a;
+}
+#nav-login a[rel="signup"]:before {
+    content: 'Don’t have an account?';
+    color: #5a5a5a;
+}
 .subcontent button{
 width: 100%;
     border-radius: 5px;
     height: 40px;
 }
+
 .color-blue {
     background-color: #5277ff !important;
 }
