--- a/new-ui.css
+++ b/new-ui.css
@@ -60,8 +60,12 @@ width:100%!important;
 color: #5277ff;
     font-weight: bold;
 }
+#nav-login{
+ border:none;
+}
 #nav-login a:hover{
 border:none;
+ background-color: transparent;
 }
 .subcontent button{
 width: 100%;
