--- a/new-ui.css
+++ b/new-ui.css
@@ -23,6 +23,9 @@ height: 40px;
     box-shadow: 0px 4px 8px 3px #e3e3e3;
    position: relative;
 }
+#login_container #ul_languages,#login_container br{
+display:none;
+}
 #login_container:befor{
 content:'© 2023 Headless RPA. All rights reserved';
   position: absolute;
