--- a/new-ui.css
+++ b/new-ui.css
@@ -22,6 +22,7 @@ height: 40px;
     padding: 50px 150px;
     box-shadow: 0px 4px 8px 3px #e3e3e3;
    position: relative;
+ padding-bottom: 100px
 }
 #login_container #ul_languages,#login_container br{
 display:none;
@@ -47,7 +48,7 @@ body.admin_account_login:before {
 }
 #nav-login{
  position: absolute;
-    bottom: 30px;
+    bottom: 90px;
     width: 100%;
     left: 0;
 }
