--- a/new-ui.css
+++ b/new-ui.css
@@ -24,6 +24,7 @@ height: 40px;
    position: relative;
  padding-bottom: 100px
 }
+
 #login_container #ul_languages,#login_container br{
 display:none;
 }
@@ -35,6 +36,7 @@ div#login_container:after {
     bottom: 30px;
     font-size: 12px;
 }
+
 body.admin_account_login:before {
   content: '';
     height: 40px;
@@ -43,6 +45,17 @@ body.admin_account_login:before {
     top: 15px;
     left: 15px;
     background-image: url(https://i0.wp.com/easysimpleapp.com/wp-content/uploads/2023/04/Asset-1@4x-8.png?resize=300%2C33&ssl=1);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+body.admin_account_login:after {
+  content: '';
+    height: 300px;
+    width: 300px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    background-image: url(https://i.postimg.cc/8PPSdcHN/login-art-work.png);
     background-repeat: no-repeat;
     background-position: center;
 }
