--- a/new-ui.css
+++ b/new-ui.css
@@ -100,19 +100,31 @@ width: 100%;
     height: 40px;
 }
 #loginForm{
-padding-top:150px;
+padding-top:120px;
 }
 #loginForm:before{
-   content: 'Login to Get Started';
+content: 'Login to Get Started';
     color: #5a5a5a;
-  font-weight: bold;
- font-size:24px;
+    font-weight: bold;
+    font-size: 24px;
+    position: absolute;
+    top: 40px;
+    text-align: center;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    width: 100%;
 }
 #loginForm:after{
-   content: 'Welcome back! Please enter your details';
+ content: 'Login to Get Started';
     color: #5a5a5a;
-  font-weight: bold;
- font-size:18px;
+    font-weight: bold;
+    font-size: 24px;
+    position: absolute;
+    top: 40px;
+    text-align: center;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    width: 100%;
 }
 .color-blue {
     background-color: #5277ff !important;
