--- a/new-ui.css
+++ b/new-ui.css
@@ -108,19 +108,19 @@ content: 'Login to Get Started';
     font-weight: bold;
     font-size: 24px;
     position: absolute;
-    top: 40px;
+    top: 80px;
     text-align: center;
     transform: translate(-50%,-50%);
     left: 50%;
     width: 100%;
 }
 #loginForm:after{
- content: 'Login to Get Started';
+ content: 'Welcome back! Please enter your details ';
     color: #5a5a5a;
     font-weight: bold;
-    font-size: 24px;
+    font-size:18px;
     position: absolute;
-    top: 40px;
+    top: 110px;
     text-align: center;
     transform: translate(-50%,-50%);
     left: 50%;
