--- a/new-ui.css
+++ b/new-ui.css
@@ -118,7 +118,31 @@ content: 'Login to Get Started';
 #loginForm:after{
  content: 'Welcome back! Please enter your details ';
     color: #5a5a5a;
+    font-weight: normal;
+    font-size:18px;
+    position: absolute;
+    top: 110px;
+    text-align: center;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    width: 100%;
+}
+#signupForm:before{
+content: 'Signup';
+    color: #5a5a5a;
     font-weight: bold;
+    font-size: 24px;
+    position: absolute;
+    top: 80px;
+    text-align: center;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    width: 100%;
+}
+#signupForm:after{
+ content: 'Tell us about yourself and we’ll get the ball rolling. ';
+    color: #5a5a5a;
+    font-weight: normal;
     font-size:18px;
     position: absolute;
     top: 110px;
