--- a/new-ui.css
+++ b/new-ui.css
@@ -100,7 +100,7 @@ width: 100%;
     border-radius: 5px;
     height: 40px;
 }
-#loginForm{
+#loginForm,#signupForm{
 padding-top:120px;
 }
 #loginForm:before{
