--- a/new-ui.css
+++ b/new-ui.css
@@ -24,6 +24,7 @@ height: 40px;
    position: relative;
  padding-bottom: 100px;
  margin-top: 120px;
+ margin-bottom: 0;
 }
 
 #login_container #ul_languages,#login_container br,#login_container .logo_container,#login_container h1,#login_container hr{
