--- a/new-ui.css
+++ b/new-ui.css
@@ -173,11 +173,21 @@ content: 'Create New Password';
     font-weight: bold;
     font-size: 24px;
     position: absolute;
-    top: 80px;
+    top: 140px;
     text-align: center;
     transform: translate(-50%,-50%);
     left: 50%;
     width: 100%;
+}
+#btnBackForgotPassword{
+background-color: transparent!important;
+    color: #5277ff !important;
+    border: 1px solid #5277ff;
+}
+#btnBackForgotPassword:hover{
+background-color: #5277ff!important;
+    color: #fff !important;
+   
 }
 .color-blue {
     background-color: #5277ff !important;
