--- a/new-ui.css
+++ b/new-ui.css
@@ -103,6 +103,7 @@ border:none;
 width: 100%;
     border-radius: 5px;
     height: 40px;
+ margin-top:20px;
 }
 #loginForm,#signupForm,#forgotpasswordForm{
 padding-top:100px;
@@ -154,6 +155,9 @@ content: 'Signup';
     transform: translate(-50%,-50%);
     left: 50%;
     width: 100%;
+}
+#signupForm .form-group:nth-child(3),#signupForm .form-group:nth-child(4){
+ display:none;
 }
 #forgotpasswordForm:before{
 content: '';
