--- a/new-ui.css
+++ b/new-ui.css
@@ -204,5 +204,22 @@ background-color: #5277ff!important;
 /*Dashboard css start */
 
 body.admin_application_list{
-background-color:#f4f7ff;
+background-color:#f4f7ff!important;
+}
+.navbar {
+    min-height: 70px;
+}
+.navbar a.logo-position:after{
+ content: '';
+    height: 40px;
+    width: 310px;
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    background-image: url(https://i0.wp.com/easysimpleapp.com/wp-content/uploads/2023/04/Asset-1@4x-8.png?resize=300%2C33&ssl=1);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.navbar .logo-position img{
+display:none;
 }
