--- a/new-ui.css
+++ b/new-ui.css
@@ -230,10 +230,12 @@ content: '';
 display:none;
 }
 
-#analytics_visits,#analytics_installs{
+#analytics_visits,#analytics_installs,#sb-tour-install-table,#sb-tour-visit-table{
 box-shadow: 0 10px 20px #d3d3d3ba, 0px 5px 6px 2px;
     background-color: #fff;
     margin-top: 20px;
     padding-top: 50px;
     border-radius: 10px;
+   overflow: hidden;
 }
+
