--- a/new-ui.css
+++ b/new-ui.css
@@ -238,4 +238,16 @@ box-shadow: 0 10px 20px #d3d3d3ba, 0px 5px 6px 2px;
     border-radius: 10px;
    overflow: hidden;
 }
+#sb-tour-total-visits,#sb-tour-total-installs{
+ background-color: #fff!important;
+    color: #808080!important;
+    border-radius: 10px;
+ text-align: left;
+}
+#total_visits,#total_installs{
+font-size: 30px;
+    display: block;
+    font-weight: bold;
+}
+
 
