--- a/new-ui.css
+++ b/new-ui.css
@@ -231,7 +231,7 @@ display:none;
 }
 
 #analytics_visits,#analytics_installs,#sb-tour-install-table,#sb-tour-visit-table{
-box-shadow: 0 10px 20px #d3d3d3ba, 0px 5px 6px 2px;
+box-shadow: 0 3px 6px 2px #d3d3d3ba;
     background-color: #fff;
     margin-top: 20px;
     padding-top: 50px;
@@ -243,11 +243,13 @@ box-shadow: 0 10px 20px #d3d3d3ba, 0px 5px 6px 2px;
     color: #808080!important;
     border-radius: 10px;
  text-align: left;
+ box-shadow: 0 3px 6px 2px #d3d3d3ba;
 }
 #total_visits,#total_installs{
 font-size: 30px;
     display: block;
     font-weight: bold;
+ color:#373d3f!important;
 }
 
 
