--- a/new-ui.css
+++ b/new-ui.css
@@ -251,5 +251,16 @@ font-size: 30px;
     font-weight: bold;
  color:#373d3f!important;
 }
+#sb-tour-total-visits:before {
+  content: '';
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    background-image: url(https://i.postimg.cc/QNvsLn4H/view-icon.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
 
