--- a/new-ui.css
+++ b/new-ui.css
@@ -276,5 +276,13 @@ content: '';
     background-position: center;
     background-size: 70%;
 }
-
-
+#sb-tour-demo-warning{display:none;}
+.dashboard{
+display:flex;
+}
+.dashboard .col-md-6:nth-child(1){
+order:2;
+}
+.dashboard .col-md-6:nth-child(2){
+order:1;
+}
