--- a/new-ui.css
+++ b/new-ui.css
@@ -282,7 +282,9 @@ display:flex;
 }
 .dashboard .col-md-6:nth-child(1){
 order:2;
+display: inherit;
 }
 .dashboard .col-md-6:nth-child(2){
 order:1;
 }
+
