--- a/new-ui.css
+++ b/new-ui.css
@@ -287,7 +287,7 @@ display: inherit;
 .dashboard .col-md-6:nth-child(2){
 order:1;
 }
-.dashboard .col-md-6:nth-child(2) .row .first-row-feature,.dashboard .col-md-6:nth-child(2) .row.first-row-feature{
+.dashboard .col-md-6:nth-child(2) .row:nth-child(2) .first-row-feature,.dashboard .col-md-6:nth-child(2) .row.first-row-feature{
 padding-top:0px!important;
 }
 
