--- a/new-ui.css
+++ b/new-ui.css
@@ -290,4 +290,7 @@ order:1;
 .dashboard .col-md-6:nth-child(2) .row:nth-child(2) .first-row-feature,.dashboard .col-md-6:nth-child(2) .row.first-row-feature{
 padding-top:0px!important;
 }
-
+.dashboard .col-md-6:nth-child(1) .content{
+  border-radius: 10px;
+box-shadow: 0 3px 6px 2px #d3d3d3ba;
+}
