--- a/new-ui.css
+++ b/new-ui.css
@@ -311,3 +311,6 @@ padding-top:0px!important;
   border-radius: 10px;
 box-shadow: 0 3px 6px 2px #d3d3d3ba;
 }
+.dashboard .col-md-6:nth-child(2) .row:nth-child(4) .first-row-feature{
+padding-top:25px!important;
+}
