--- a/new-ui.css
+++ b/new-ui.css
@@ -315,3 +315,6 @@ box-shadow: 0 3px 6px 2px #d3d3d3ba;
 .dashboard .col-md-6:nth-child(2) .row:nth-child(4) .first-row-feature{
 padding-top:25px!important;
 }
+.dashboard h3#sb-tour-app.title-dashboard{
+background-color: #fff !important;
+}
