--- a/new-ui.css
+++ b/new-ui.css
@@ -311,7 +311,25 @@ dashboard .col-md-6:nth-child(2) .row.first-row-feature .col-md-12::before{
 .dashboard .col-md-6:nth-child(1) .content{
   border-radius: 10px;
 box-shadow: 0 3px 6px 2px #d3d3d3ba;
+ position: relative;
 }
+.dashboard .col-md-6:nth-child(1) .content .col-xs-6{
+position: absolute;
+    right: 15px;
+    top: 8px;
+ text-align: right;
+}
+.dashboard .col-md-6:nth-child(1) .content #search_row{
+position: absolute;
+    right: 180px;
+    top: 7px;
+}
+.dashboard .col-md-6:nth-child(1) .content .col-xs-6 #sb-tour-button-create{
+margin-top:0px;
+ width: 60%;
+    border-radius: 50px;
+}
+
 .dashboard .col-md-6:nth-child(2) .row:nth-child(4) .first-row-feature{
 padding-top:25px!important;
 }
@@ -319,7 +337,7 @@ padding-top:25px!important;
 background-color: #fff !important;
 }
 .dashboard h3#sb-tour-app.title-dashboard span{
-diaplay:none;
+display: none;
 }
 .dashboard h3#sb-tour-app.title-dashboard:after{
 content: 'My Applications';
