--- a/new-ui.css
+++ b/new-ui.css
@@ -315,7 +315,7 @@ box-shadow: 0 3px 6px 2px #d3d3d3ba;
 }
 .dashboard .col-md-6:nth-child(1) .content .col-xs-6{
 position: absolute;
-    right: 15px;
+    right: 5px;
     top: 8px;
  text-align: right;
 }
@@ -331,6 +331,16 @@ margin-top: 0px;
     border-radius: 50px;
     color: #5277ff!important;
  overflow:hidden;
+}
+.dashboard .col-md-6:nth-child(1) .content .col-xs-6 #sb-tour-button-create:before{
+content: 'My Applications';
+    color: #2e3342;
+    font-weight: bold;
+    font-size: 14px;
+    position: absolute;
+    top: 16px;
+    left: 15px;
+    text-transform: capitalize;
 }
 
 .dashboard .col-md-6:nth-child(2) .row:nth-child(4) .first-row-feature{
@@ -349,6 +359,6 @@ content: 'My Applications';
     font-size: 17px;
     position: absolute;
     top: 16px;
-    left: 35px;
+    left: 15px;
     text-transform: capitalize;
 }
