--- a/new-ui.css
+++ b/new-ui.css
@@ -315,19 +315,19 @@ box-shadow: 0 3px 6px 2px #d3d3d3ba;
 }
 .dashboard .col-md-6:nth-child(1) .content .col-xs-6{
 position: absolute;
-    right: 5px;
+    right: 0px;
     top: 8px;
  text-align: right;
 }
 .dashboard .col-md-6:nth-child(1) .content #search_row{
 position: absolute;
-    right: 220px;
+    right: 170px;
     top: 7px;
-    width: 35%;
+    width: 250px;
 }
 .dashboard .col-md-6:nth-child(1) .content .col-xs-6 #sb-tour-button-create{
 margin-top: 0px;
-    width: 50%;
+    width: 160px;
     border-radius: 50px;
     color: #5277ff!important;
  overflow:hidden;
@@ -336,11 +336,13 @@ margin-top: 0px;
 content: '+ Create New';
     color: #ffffff;
     font-weight: bold;
-    font-size: 13px;
+    font-size: 16px;
     position: absolute;
-    top: 12px;
-    left: 30px;
+    top: 9px;
+    left: 25px;
     text-transform: capitalize;
+    z-index: 999;
+    opacity: 1;
 }
 
 .dashboard .col-md-6:nth-child(2) .row:nth-child(4) .first-row-feature{
