--- a/new-ui.css
+++ b/new-ui.css
@@ -372,3 +372,9 @@ content: 'My Applications';
 #create_application button{
 margin-top:0px;
 }
+#create_application{
+background-color: rgb(244, 247, 255);
+    padding: 0px 20px 20px;
+    border-radius: 10px;
+    display: none;
+}
