--- a/new-ui.css
+++ b/new-ui.css
@@ -388,3 +388,10 @@ background-color: rgb(244, 247, 255);
     border-top:none!important;
     padding-bottom: 12px;
 }
+.delete_app:after{
+content: "\f1f8";
+  font-size: 17px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
