--- a/new-ui.css
+++ b/new-ui.css
@@ -388,8 +388,8 @@ background-color: rgb(244, 247, 255);
     border-top:none!important;
     padding-bottom: 12px;
 }
-.delete_app:after{
-content: "\f1f8";
+.delete_app:before{
+content: "\f1f8"!important;
   font-size: 17px;
     position: absolute;
     top: 0px;
