--- a/new-ui.css
+++ b/new-ui.css
@@ -388,10 +388,27 @@ background-color: rgb(244, 247, 255);
     border-top:none!important;
     padding-bottom: 12px;
 }
+.delete_app{
+background-color: transparent;
+    color: transparent;
+    width: 20px;
+    padding: 0;
+    margin: 0 20px;
+ display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 .delete_app:before{
 content: "\f1f8"!important;
-  font-size: 17px;
+    font-size: 25px;
     position: absolute;
-    top: 0px;
+    top: -6px;
     right: 0px;
+    opacity: 1;
+    background-color: transparent;
+    color: #bfbfbf;
+    z-index: 99;
 }
