--- a/new-ui.css
+++ b/new-ui.css
@@ -444,4 +444,5 @@ background-color: #5277ff!important;
     display: inline-block;
     border-radius: 10px;
  line-hight:1;
+ color:#fff!important;
 }
