--- a/new-ui.css
+++ b/new-ui.css
@@ -22,7 +22,7 @@ height: 40px;
     max-width: 700px;
     min-width: 300px;
     margin: 70px auto;
-    padding: 50px 150px;
+    padding: 50px 10%;
     box-shadow: 0px 4px 8px 3px #e3e3e3;
    position: relative;
  padding-bottom: 100px;
