--- a/new-ui.css
+++ b/new-ui.css
@@ -460,3 +460,13 @@ background-color: #5277ff!important;
 #sb-tour-install-table.table-striped > tbody > tr > td:nth-child(1),#sb-tour-visit-table.table-striped > tbody > tr > td:nth-child(1){
 color:#6cbdeb!important;
 }
+
+
+
+
+@media only screen and (max-width: 768px) {
+.dashboard {
+    display: block;
+}
+
+}
