--- a/new-ui.css
+++ b/new-ui.css
@@ -462,11 +462,14 @@ color:#6cbdeb!important;
 }
 
 
-
-
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 991px) {
 .dashboard {
     display: block;
 }
+
+}
+
+@media only screen and (max-width: 768px) {
+
 
 }
