--- a/new-ui.css
+++ b/new-ui.css
@@ -466,10 +466,28 @@ color:#6cbdeb!important;
 .dashboard {
     display: block;
 }
-
+ #sb-tour-total-visits{
+ margin-bottom:15px;
+ }
 }
 
 @media only screen and (max-width: 768px) {
 
 
 }
+@media only screen and (max-width: 600px) {
+.dashboard .col-md-6:nth-child(1) .content .col-xs-6 {
+    position: initial;
+    right: initial;
+    top: initial;
+    text-align: left;
+}
+ .dashboard .col-md-6:nth-child(1) .content #search_row {
+    position: initial;
+    right: initial;
+    top: auto;
+    width: 50%;
+}
+
+}
+
