--- a/new-ui.css
+++ b/new-ui.css
@@ -468,10 +468,13 @@ color:#6cbdeb!important;
 /*Editor css start */
 #left-sidebar-wrapper.bkg-sidebar-left {
     background-color: #5277ff !important;
+   margin: 0px 10px;
 }
 .bkg-sidebar-left.active, .bkg-sidebar-left .active, .bkg-sidebar-left:active {
-    background-color: #ffffff !important;
+ background-color: #ffffff !important;
     color: #5277ff;
+  
+    border-radius: 5px;
 }
 .sidebar-nav li {
     line-height: 40px;
