--- a/new-ui.css
+++ b/new-ui.css
@@ -491,6 +491,9 @@ color:#6cbdeb!important;
  margin: 0px 10px;
     font-size: 14px!important;
     border-radius: 5px;
+ white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 #left-sidebar-wrapper i { 
     font-size: 16px!important;
