--- a/new-ui.css
+++ b/new-ui.css
@@ -519,7 +519,13 @@ color:#6cbdeb!important;
     display: none;
 }
 
-
+.menu_steps .step_menu_feature:hover{
+background-color: #eef1ff!important;
+    border-radius: 50px;
+    color: #5277ff!important;
+    box-shadow: 0px 2px 4px 1px #e5e5e594;
+ 
+}
 
 
 
