--- a/new-ui.css
+++ b/new-ui.css
@@ -510,7 +510,7 @@ color:#6cbdeb!important;
     border-radius: 50px;
 }
 .menu_steps .step_menu_feature {
-    padding: 7px;
+    padding: 7px 10px;
  background-color: transparent!important;
 }
 .step_menu_feature li{
