--- a/new-ui.css
+++ b/new-ui.css
@@ -528,8 +528,17 @@ background-color: #eef1ff!important;
     box-shadow: 0px 2px 4px 1px #e5e5e594;
  font-weight: bold;
 }
-
-
+.content-color {
+    background-color: #f8fafc !important;
+}
+#template_content .title-editor{
+ border: none;
+    text-align: left;
+    padding: 10px;
+    font-size: 20px;
+    color: #5277ff!important;
+    text-transform: capitalize;
+}
 
 
 @media only screen and (max-width: 991px) {
