--- a/new-ui.css
+++ b/new-ui.css
@@ -554,6 +554,9 @@ background-color: #eef1ff!important;
     border-radius: 20px;
     background-color: #fff;
 }
+img#layout_overview{
+ border:none!important;
+}
 
 @media only screen and (max-width: 991px) {
 .dashboard {
