--- a/new-ui.css
+++ b/new-ui.css
@@ -37,22 +37,22 @@ input[type=radio].color-red:after {
 }
 /* Track Styles  */
 /* chrome, safari, edge, firefox */
-input::-webkit-slider-runnable-track{
+input[type="range"]::-webkit-slider-runnable-track{
   height:5px;
   border-radius:20px;
   box-shadow:inset 1px 1px 2px #57575780;
 }
 
-input::-moz-range-track{
+input[type="range"]::-moz-range-track{
   height:5px;
   border-radius:20px;
   box-shadow:inset 1px 1px 2px #57575780;
 }
 /* red track */
-input:first-child::-webkit-slider-runnable-track {
+input[type="range"]::-webkit-slider-runnable-track {
   background:#ff5e5e;
 }
-input:first-child::-moz-range-track  {
+input[type="range"]::-moz-range-track  {
   background:#ff5e5e;
 }
 
