--- a/new-ui.css
+++ b/new-ui.css
@@ -18,6 +18,9 @@ height: 40px;
 .btn-grey{
  background-color: #2e3342 !important;
 }
+.color-red {
+    background-color: #5277ff !important;
+}
 .default_button.color-red,.upload_images{
  background-color: #5277ff !important;
 }
@@ -607,13 +610,23 @@ img#layout_overview{
     right: 20px;
     width: 20%;
     background-color: transparent!important;
-    color: red!important;
+    color: #5277ff!important;
     text-decoration: underline;
     font-size: 18px;
     text-transform: capitalize;
 }
 #homepage_slider .slider_images_uploader_action{
  position: relative;
+}
+#uploaded_slider_images {
+   background-color: #eef1ff;
+}
+.dismiss-help {
+ background-color: transparent!important;
+    color: #5277ff!important;
+    text-decoration: underline;
+    font-size: 18px;
+    text-transform: capitalize;
 }
 
 @media only screen and (max-width: 991px) {
