--- a/new-ui.css
+++ b/new-ui.css
@@ -628,6 +628,16 @@ img#layout_overview{
     font-size: 18px;
     text-transform: capitalize;
 }
+.font-label {
+    background-color: #eef1ff;
+    border: 1px solid rgb(181 181 181 / 10%);
+    border-radius: 6px;
+}
+.custom-box {
+    background-color: #eef1ff;
+ border:none;
+    border-radius: 10px;
+}
 
 @media only screen and (max-width: 991px) {
 .dashboard {
