--- a/new-ui.css
+++ b/new-ui.css
@@ -608,7 +608,7 @@ img#layout_overview{
  position: absolute;
     bottom: 10px;
     right: 20px;
-    width: 20%;
+    width: 150px!important;
     background-color: transparent!important;
     color: #5277ff!important;
     text-decoration: underline;
