--- a/new-ui.css
+++ b/new-ui.css
@@ -42,6 +42,9 @@ input[type=radio].color-red:after {
     border-bottom: none;
     padding: 20px 20px 40px 20px;
 }
+.alert-info .text-danger {
+    color: #5277ff;
+}
 /* Track Styles  */
 /* chrome, safari, edge, firefox */
 
